distinct and sorted with streams